# libfoldy

./: .gitignore  README.md  meson.build  vala-lint.conf
.github/workflows/: CI-push.yml
build-aux/sisyphus/: libfoldy.spec
lib/: folder.vala  folders.vala  meson.build
